--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,76 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@online{earthsciencedatasystemsWhatRemoteSensing2019,
+  type = {Backgrounder},
+  title = {What Is {{Remote Sensing}}? | {{Earthdata}}},
+  shorttitle = {What Is {{Remote Sensing}}?},
+  author = {family=Earth Science Data Systems, given=NASA, given-i=NASA},
+  date = {2019-08-23},
+  url = {https://www.earthdata.nasa.gov/learn/backgrounders/remote-sensing},
+  urldate = {2024-01-26},
+  abstract = {Tutorial on remotely-sensed data, from sensor characteristics, to different types of resolution, to data processing and analysis.},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\A9P7S34N\Earth Science Data Systems - 2019 - What is Remote Sensing  Earthdata.html}
 }
 
+@article{gilgeGoogleStreetView2016,
+  title = {Google {{Street View}} and the {{Image}} as {{Experience}}},
+  author = {Gilge, Cheryl},
+  date = {2016-07-02},
+  journaltitle = {GeoHumanities},
+  volume = {2},
+  number = {2},
+  pages = {469--484},
+  publisher = {{Routledge}},
+  issn = {2373-566X},
+  doi = {10.1080/2373566X.2016.1217741},
+  url = {https://doi.org/10.1080/2373566X.2016.1217741},
+  urldate = {2023-12-12},
+  abstract = {Google Street View (GSV) presents the world as fact, mapped and documented, and reconstituted online: an approximation of the street condition. Google’s fleet takes the built environment as its territory, renders it photographically, and maps it spatially. GSV’s comprehensive coverage makes it useful for daily navigational needs, and its diverse mapped terrain encourages user innovation, experimentation, and exploration. As a spatial representation, it brings together two distinct ways of knowing the world through empirical documentation: mapping and photography. Whereas maps offer visual diagrams of spatial information, photographs offer documents with spatiotemporal specificity. Together, the spatialized image becomes the mode of navigation and exploration. This article draws on the embodied subject, wayfinding, and perception in relation to spatial knowledge formation to consider GSV’s ability to alter existing daily practices. Rather than the sensorial rich primary experience of moving through the world, the visually rich secondary experiences via GSV come to inform our navigation and exploration through image recognition. This article argues that the platform’s spatialized image and efficient technological layer produces a shift from the embodied experience of place to the image as experience.},
+  keywords = {，技术,fenomenología,navegación,navigation,percepción,perception,phenomenology,representaciones espaciales,spatial representations,technology,tecnología,导航,感知,现象学,空间再现},
+  file = {C:\Users\shaun\Zotero\storage\8RNW2NGD\Gilge - 2016 - Google Street View and the Image as Experience.pdf}
+}
 
+@online{manviGeoLLMExtractingGeospatial2023,
+  title = {{{GeoLLM}}: {{Extracting Geospatial Knowledge}} from {{Large Language Models}}},
+  shorttitle = {{{GeoLLM}}},
+  author = {Manvi, Rohin and Khanna, Samar and Mai, Gengchen and Burke, Marshall and Lobell, David and Ermon, Stefano},
+  date = {2023-10-09},
+  eprint = {2310.06213},
+  eprinttype = {arxiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2310.06213},
+  url = {http://arxiv.org/abs/2310.06213},
+  urldate = {2024-01-10},
+  abstract = {The application of machine learning (ML) in a range of geospatial tasks is increasingly common but often relies on globally available covariates such as satellite imagery that can either be expensive or lack predictive power. Here we explore the question of whether the vast amounts of knowledge found in Internet language corpora, now compressed within large language models (LLMs), can be leveraged for geospatial prediction tasks. We first demonstrate that LLMs embed remarkable spatial information about locations, but naively querying LLMs using geographic coordinates alone is ineffective in predicting key indicators like population density. We then present GeoLLM, a novel method that can effectively extract geospatial knowledge from LLMs with auxiliary map data from OpenStreetMap. We demonstrate the utility of our approach across multiple tasks of central interest to the international community, including the measurement of population density and economic livelihoods. Across these tasks, our method demonstrates a 70\% improvement in performance (measured using Pearson's \$r\^2\$) relative to baselines that use nearest neighbors or use information directly from the prompt, and performance equal to or exceeding satellite-based benchmarks in the literature. With GeoLLM, we observe that GPT-3.5 outperforms Llama 2 and RoBERTa by 19\% and 51\% respectively, suggesting that the performance of our method scales well with the size of the model and its pretraining dataset. Our experiments reveal that LLMs are remarkably sample-efficient, rich in geospatial information, and robust across the globe. Crucially, GeoLLM shows promise in mitigating the limitations of existing geospatial covariates and complementing them well.},
+  pubstate = {preprint},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {C\:\\Users\\shaun\\Zotero\\storage\\5FXAIDZX\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.pdf;C\:\\Users\\shaun\\Zotero\\storage\\P89BHQUM\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.html}
+}
+
+@online{RemoteSensingSatellite,
+  title = {Remote {{Sensing}}, {{Satellite Imaging Technology}} | {{Satellite Imaging Corp}}},
+  url = {https://www.satimagingcorp.com/services/resources/characterization-of-satellite-remote-sensing-systems/},
+  urldate = {2024-01-27},
+  file = {C:\Users\shaun\Zotero\storage\P2NF5IDB\characterization-of-satellite-remote-sensing-systems.html}
+}
+
+@article{songAdvancesGeocomputationGeospatial2023,
+  title = {Advances in Geocomputation and Geospatial Artificial Intelligence ({{GeoAI}}) for Mapping},
+  author = {Song, Yongze and Kalacska, Margaret and Gašparović, Mateo and Yao, Jing and Najibi, Nasser},
+  date = {2023-06-01},
+  journaltitle = {International Journal of Applied Earth Observation and Geoinformation},
+  shortjournal = {International Journal of Applied Earth Observation and Geoinformation},
+  volume = {120},
+  pages = {103300},
+  issn = {1569-8432},
+  doi = {10.1016/j.jag.2023.103300},
+  url = {https://www.sciencedirect.com/science/article/pii/S156984322300122X},
+  urldate = {2023-10-26},
+  abstract = {Geocomputation and geospatial artificial intelligence (GeoAI) have essential roles in advancing geographic information science (GIS) and Earth observation to a new stage. GeoAI has enhanced traditional geospatial analysis and mapping, altering the methods for understanding and managing complex human–natural systems. However, there are still challenges in various aspects of geospatial applications related to natural, built, and social environments, and in integrating unique geospatial features into GeoAI models. Meanwhile, geospatial and Earth data are critical components in geocomputation and GeoAI studies, as they can effectively reveal geospatial patterns, factors, relationships, and decision-making processes. This editorial provides a comprehensive overview of geocomputation and GeoAI applications in mapping, classifying them into four categories: (i) buildings and infrastructure, (ii) land use analysis, (iii) natural environment and hazards, and (iv) social issues and human activities. In addition, the editorial summarizes geospatial and Earth data in case studies into seven categories, including in-situ data, geospatial datasets, crowdsourced geospatial data (i.e., geospatial big data), remote sensing data, photogrammetry data, LiDAR, and statistical data. Finally, the editorial presents challenges and opportunities for future research.},
+  keywords = {Earth observation,Geocomputation,Geographical information science (GIS),Geospatial artificial intelligence (GeoAI),Mapping,Remote sensing},
+  file = {C:\Users\shaun\Zotero\storage\2R9F4W69\Song et al. - 2023 - Advances in geocomputation and geospatial artifici.html}
+}
+
+@misc{remotes,
+	title = {Remote Sensing, Satellite Imaging Technology | Satellite Imaging Corp},
+	url = {https://www.satimagingcorp.com/services/resources/characterization-of-satellite-remote-sensing-systems/}
+}
