--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,26 @@
   file = {C:\Users\shaun\Zotero\storage\A9P7S34N\Earth Science Data Systems - 2019 - What is Remote Sensing  Earthdata.html}
 }
 
+@article{erreaRemoteSensingAnalysis2023,
+  title = {Remote {{Sensing Analysis}} of the {{Surface Urban Heat Island Effect}} in {{Vitoria-Gasteiz}}, 1985 to 2021},
+  author = {Errea, Cristina Laurenti and family=Almeida, given=Cátia Rodrigues, prefix=de, useprefix=false and Gonçalves, Artur and Teodoro, Ana Cláudia},
+  date = {2023-01},
+  journaltitle = {Remote Sensing},
+  volume = {15},
+  number = {12},
+  pages = {3110},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2072-4292},
+  doi = {10.3390/rs15123110},
+  url = {https://www.mdpi.com/2072-4292/15/12/3110},
+  urldate = {2024-01-28},
+  abstract = {Vitoria-Gasteiz has taken several urban greening actions such as the introduction of a ring of parks that connect the city’s surroundings, a sustainable mobility plan, and urban green structure strategies. Previous studies establish a connection to the importance of greening to mitigate the surface urban heat island (SUHI) and evaluate the effectiveness of these measures on urban climate. In this study, land surface temperature (LST), a remote sensing (RS) parameter, recorded by Landsat satellites (5, 7, and 8) was used to evaluate the effect of SUHI in Vitoria-Gasteiz between 1985–2021. The aim was to evaluate whether the urban greening actions influenced the local thermal conditions and, consequently, helped minimize the SUHI. Thirty sampling locations were identified, corresponding to different local climate zones (LCZ), at which LST data were extracted. A total of 218 images were processed and separated into summer and winter. Four of the 30 locations had, since 2003, on-site meteorological stations with regular air temperature (Tair) measurements which were used to validate the LST data. The results showed that Spearman’s correlation between Tair and LST was higher than 0.88 in all locations. An amount of 21 points maintained the same LCZ classification throughout the analysed period and nine underwent a LCZ transformation. The highest average temperature was identified in the city centre (urbanized area), and the lowest average was in a forest on the outskirts of the city. SUHI was more intense during the summer. A significant increase in SUHI intensity was identified in areas transformed from natural to urban LCZs. However, SUHI during satellite data acquisition periods has shown a minimal change in areas where sustainable practices have been implemented. RS was valuable for analysing the thermal behaviour of the LCZs, despite the limitation inherent in the satellite’s time of passage, in which the SUHI effect is not as evident.},
+  issue = {12},
+  langid = {english},
+  keywords = {Google Earth Engine,land surface temperature,Landsat,surface urban heat island,urban greening},
+  file = {C:\Users\shaun\Zotero\storage\ZECNMCK7\Errea et al. - 2023 - Remote Sensing Analysis of the Surface Urban Heat .pdf}
+}
+
 @article{gilgeGoogleStreetView2016,
   title = {Google {{Street View}} and the {{Image}} as {{Experience}}},
   author = {Gilge, Cheryl},
@@ -46,11 +66,60 @@
   file = {C\:\\Users\\shaun\\Zotero\\storage\\5FXAIDZX\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.pdf;C\:\\Users\\shaun\\Zotero\\storage\\P89BHQUM\\Manvi et al. - 2023 - GeoLLM Extracting Geospatial Knowledge from Large.html}
 }
 
+@online{MeasuringGrowthUsing2013,
+  title = {Measuring {{Growth}} Using {{Satellite Imagery}} and {{Spatial Analysis}}},
+  date = {2013-07-01T12:10:03-04:00},
+  url = {https://neptis.org/publications/chapters/measuring-growth-using-satellite-imagery-and-spatial-analysis},
+  urldate = {2024-01-28},
+  langid = {english},
+  organization = {{Neptis Foundation}},
+  file = {C:\Users\shaun\Zotero\storage\V3TNWIAI\measuring-growth-using-satellite-imagery-and-spatial-analysis.html}
+}
+
 @online{RemoteSensingSatellite,
   title = {Remote {{Sensing}}, {{Satellite Imaging Technology}} | {{Satellite Imaging Corp}}},
   url = {https://www.satimagingcorp.com/services/resources/characterization-of-satellite-remote-sensing-systems/},
   urldate = {2024-01-27},
   file = {C:\Users\shaun\Zotero\storage\P2NF5IDB\characterization-of-satellite-remote-sensing-systems.html}
+}
+
+@article{schumannFloodModelingPrediction2023,
+  title = {Flood {{Modeling}} and {{Prediction Using Earth Observation Data}}},
+  author = {Schumann, Guy and Giustarini, Laura and Tarpanelli, Angelica and Jarihani, Ben and Martinis, Sandro},
+  date = {2023-10-01},
+  journaltitle = {Surveys in Geophysics},
+  shortjournal = {Surv Geophys},
+  volume = {44},
+  number = {5},
+  pages = {1553--1578},
+  issn = {1573-0956},
+  doi = {10.1007/s10712-022-09751-y},
+  url = {https://doi.org/10.1007/s10712-022-09751-y},
+  urldate = {2024-01-28},
+  abstract = {The ability to map floods from satellites has been known for over 40~years. Early images of floods were rather difficult to obtain, and flood mapping from satellites was thus rather opportunistic and limited to only a few case studies. However, over the last decade, with a proliferation of open-access EO data, there has been much progress in the development of Earth Observation products and services tailored to various end-user needs, as well as its integration with flood modeling and prediction efforts. This article provides an overview of the use of satellite remote sensing of floods and outlines recent advances in its application for flood mapping, monitoring and its integration with flood models. Strengths and limitations are discussed throughput, and the article concludes by looking at new developments.},
+  langid = {english},
+  keywords = {Data assimilation,Earth Observation,Flood mapping,Flood Modeling,Floods},
+  file = {C:\Users\shaun\Zotero\storage\7PWJ3745\Schumann et al. - 2023 - Flood Modeling and Prediction Using Earth Observat.pdf}
+}
+
+@article{schumannFloodModelingPrediction2023a,
+  title = {Flood {{Modeling}} and {{Prediction Using Earth Observation Data}}},
+  author = {Schumann, Guy and Giustarini, Laura and Tarpanelli, Angelica and Jarihani, Ben and Martinis, Sandro},
+  date = {2023-10-01},
+  journaltitle = {Surveys in Geophysics},
+  shortjournal = {Surv Geophys},
+  volume = {44},
+  number = {5},
+  pages = {1553--1578},
+  publisher = {{Springer Netherlands}},
+  issn = {1573-0956},
+  doi = {10.1007/s10712-022-09751-y},
+  url = {https://link.springer.com/article/10.1007/s10712-022-09751-y},
+  urldate = {2024-01-28},
+  abstract = {Abstract The ability to map floods from satellites has been known for over 40 years. Early images of floods were rather difficult to obtain, and flood mapping from satellites was thus rather opportunistic and limited to only a few case studies. However, over the last decade, with a proliferation of open-access EO data, there has been much progress in the development of Earth Observation products and services tailored to various end-user needs, as well as its integration with flood modeling and prediction efforts. This article provides an overview of the use of satellite remote sensing of floods and outlines recent advances in its application for flood mapping, monitoring and its integration with flood models. Strengths and limitations are discussed throughput, and the article concludes by looking at new developments.},
+  issue = {5},
+  langid = {english},
+  file = {C:\Users\shaun\Zotero\storage\4NTW3MEQ\Schumann et al. - 2023 - Flood Modeling and Prediction Using Earth Observat.pdf}
 }
 
 @article{songAdvancesGeocomputationGeospatial2023,
@@ -70,7 +139,19 @@
   file = {C:\Users\shaun\Zotero\storage\2R9F4W69\Song et al. - 2023 - Advances in geocomputation and geospatial artifici.html}
 }
 
-@misc{remotes,
-	title = {Remote Sensing, Satellite Imaging Technology | Satellite Imaging Corp},
-	url = {https://www.satimagingcorp.com/services/resources/characterization-of-satellite-remote-sensing-systems/}
+@article{wangUrbanDevelopmentAnalysis2021,
+  title = {Urban Development Analysis Using Built-up Area Maps Based on Multiple High-Resolution Satellite Data},
+  author = {Wang, Haibo and Gong, Xueshuang and Wang, Bingbing and Deng, Chao and Cao, Qiong},
+  date = {2021-12-01},
+  journaltitle = {International Journal of Applied Earth Observation and Geoinformation},
+  shortjournal = {International Journal of Applied Earth Observation and Geoinformation},
+  volume = {103},
+  pages = {102500},
+  issn = {1569-8432},
+  doi = {10.1016/j.jag.2021.102500},
+  url = {https://www.sciencedirect.com/science/article/pii/S0303243421002075},
+  urldate = {2024-01-28},
+  abstract = {Analysis of built-up areas—the most significant artificial urban areas—reveals physical development processes. Unlike previous research involving medium-resolution remote sensing (RS) images, this study used built-up area maps generated from multiple high-resolution RS images with abundant built-up area edge information to analyze development in Zhengzhou. A transferable built-up area extraction (TBUAE) algorithm was developed to map the built-up area maps. The algorithm allows the developed deep learning model used on a certain satellite image to be eligible for other types of satellite images by altering the data distribution with adaptive Wallis filtering (DT-AWF). The proposed method alleviates the pressure of deep learning on the demand for new satellite image samples that are time-consuming and laborious. Additionally, the accuracy of built-up area mapping using this method exceeds 90\%. Quantitative and qualitative analyses were conducted on the map results to observe the urban development of Zhengzhou from 2016 to 2020. We found that Zhengzhou has expanded rapidly since it was defined as a central city in central China in 2016. Additionally, the suburban built-up area has expanded rapidly and developed together with the central city. Further, affected by the policy, the built-up areas in different regions of Zhengzhou has changed differently, the urban edge is more simplified, and the urban internal structure is more compact.},
+  keywords = {Built-up area,Remote sensing,Transfer learning,Urban development},
+  file = {C:\Users\shaun\Zotero\storage\3GKGL4TY\S0303243421002075.html}
 }
